fixed logo in main page not showing

--- a/css/app.css
+++ b/css/app.css
@@ -35,7 +35,7 @@ h1 {
     left: 0px;
     width: 200px;
     height: 200px;
-    background-image: url("/images/transparentlogo.png");
+    background-image: url("/Magic8Ball/images/transparentlogo.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
